1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* fifo.c (open_hook: WAIT): Add braces to silence gcc warning.
	(trivfs_S_io_select): Likewise.
	* new-fifo.c (fifo_trans_open): Likewise.
	(trivfs_S_io_select): Likewise.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* firmlink.c (main): Fix return type to int, and use return.
	* fwd.c (main): Likewise.
	* new-fifo.c (main): Likewise.
	* magic.c (main): Likewise.
	* fifo.c (main): Likewise.
	* null.c (main): Likewise.

1997-09-04  Miles Bader  <miles@gnu.ai.mit.edu>

	* null.c (main): Fix typo.

Wed Aug 20 14:07:56 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* crash.c (main): New args for
	ports_manage_port_operations_multithread.
	* fifo.c (main): Likewise.
	* firmlink.c (main): Likewise.
	* new-fifo.c (main): Likewise.
	* null.c (main): Likewise.

1997-07-22  Miles Bader  <miles@gnu.ai.mit.edu>

	* devport.c: File removed.
	* Makefile (targets): Remove devport.
	(SRCS): Remove devport.c.

1997-07-15  Miles Bader  <miles@gnu.ai.mit.edu>

	* magic.c (main): Actually parse the arg.

1997-07-14  Miles Bader  <miles@gnu.ai.mit.edu>

	* magic.c (argp_program_version, args_doc, doc): New variables.
	(main): Use argp to parse args.
	Add new includes <argp.h> & <version.h>.

Fri Feb 28 20:00:14 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (fwd null ifsock fifo new-fifo devport firmlink):
	Add firmlink to targets depending on libthreads.

	* null.c (main): Make multithreaded.

Tue Feb 25 15:42:40 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* firmlink.c (main): Make multithreaded.

Sun Feb 23 00:23:49 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* firmlink.c (argp): Use OPTIONS.
	(getroot): If firmlink returns ENOENT, act like an unresolvable link.
	Don't support visible mode.
	(options, parse_opt): Remove -i.

Wed Feb 19 21:34:01 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* null.c (argp_program_version): Make const.

	* fifo.c (argp_program_version, argp): New variables.